; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_windowfuncs.c_rank_up.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_windowfuncs.c_rank_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @rank_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rank_up(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_2__*, align 8
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i64 @WinGetCurrentPosition(i32 %6)
  store i64 %7, i64* %4, align 8
  %8 = load i32, i32* %2, align 4
  %9 = call i64 @WinGetPartitionLocalMemory(i32 %8, i32 4)
  %10 = inttoptr i64 %9 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %10, %struct.TYPE_2__** %5, align 8
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %1
  %16 = load i64, i64* %4, align 8
  %17 = icmp eq i64 %16, 0
  %18 = zext i1 %17 to i32
  %19 = call i32 @Assert(i32 %18)
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  store i32 1, i32* %21, align 4
  br label %35

22:                                               ; preds = %1
  %23 = load i64, i64* %4, align 8
  %24 = icmp sgt i64 %23, 0
  %25 = zext i1 %24 to i32
  %26 = call i32 @Assert(i32 %25)
  %27 = load i32, i32* %2, align 4
  %28 = load i64, i64* %4, align 8
  %29 = sub nsw i64 %28, 1
  %30 = load i64, i64* %4, align 8
  %31 = call i32 @WinRowsArePeers(i32 %27, i64 %29, i64 %30)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %34, label %33

33:                                               ; preds = %22
  store i32 1, i32* %3, align 4
  br label %34

34:                                               ; preds = %33, %22
  br label %35

35:                                               ; preds = %34, %15
  %36 = load i32, i32* %2, align 4
  %37 = load i64, i64* %4, align 8
  %38 = call i32 @WinSetMarkPosition(i32 %36, i64 %37)
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i64 @WinGetCurrentPosition(i32) #1

declare dso_local i64 @WinGetPartitionLocalMemory(i32, i32) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @WinRowsArePeers(i32, i64, i64) #1

declare dso_local i32 @WinSetMarkPosition(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
